<resources>
    <string name="app_name">My Application</string>
    <string name="mad">MAD</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</string>
    <string name="follow">FOLLOW</string>
    <string name="message">MESSAGE</string>
    <string name="todo">TODO</string>
    <string name="todo2">TODO</string>
</resources>